@@ -93,7 +93,8 @@ For more details, please see https://issues.apache.org/jira/browse/AURORA-1169
   ext.slf4jRev = '1.7.12'
   ext.stringTemplateRev = '3.2.1'
   ext.thriftRev = '0.9.1'
-  ext.zookeeperRev = '3.3.4'
+  // Note: changes in >=3.4.3 trigger a failure in Kerberos5ShiroRealmModuleTest on our end.
+  ext.zookeeperRev = '3.4.2'
 
   configurations {
     compile {
