@@ -9,6 +9,7 @@
     `-enable_cors_for`.
   - `-deduplicate_snapshots` and `-deflate_snapshots`.  These features are good to always enable.
   - `-enable_job_updates` and `-enable_job_creation`
+- Upgraded the scheduler ZooKeeper client from 3.3.4 to 3.4.2.
 
 0.11.0
 ------
